--- a/assets/style.css
+++ b/assets/style.css
@@ -3,6 +3,10 @@
     padding:0;
     box-sizing: border-box;
 }
+.cont{
+    position: relative !important;
+    min-height: 300px;
+}
 .conti .left{
     position: absolute !important;
     bottom: 50% !important;
@@ -23,7 +27,7 @@
     border-radius: 50% ;
     filter:blur(25px) !important;
     background:radial-gradient(circle at 80% 60%,#8EADD53D ,transparent 70%) !important;
-    z-index: -1 !important;
+    z-index: 1 !important;
     transform: translateY(-50%) !important;
     opacity: 0.4 !important;
     right: 0 !important;
